--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -990,6 +990,7 @@ stepper step.current {
 stepper div.controls {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 stepper input[type=range] {
@@ -1000,11 +1001,17 @@ stepper input[type=range] {
 stepper button {
     background-color: #0e73ee;
     color: white;
-    padding: .4em 1.4em;
+    padding: 1em 3em;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin: .4em;
+}
+
+@media(min-width: 480px){
+    stepper button {
+        padding: .4em 1.4em;
+    }
 }
 
 stepper button.prev {
