--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -128,8 +128,8 @@ img {
     display: block;
     margin: 1.5em auto 3em auto;
     /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
-    border: 1px solid;
-    border-color: #f2f2f2;
+    /* border: 1px solid; */
+    /* border-color: #f2f2f2; */
 }
 
 img[noshadow] {
