--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -967,11 +967,14 @@ stepper step shell {
 
 stepper explanation {
     font-size: 14px;
-    background-color: #d1ecf1;
-    border: 1px solid #bee5eb;
+    /* background-color: #d1ecf1; */
+    background-color:#0e73ee;
+    /* border: 4px solid #0e73ee; */
+    color: white;
+    /* border: 1px solid #bee5eb; */
     padding: .8em 1em;
     /* background: #fafafa;
-    border: 1px solid #efefef; */
+     */
     /* box-shadow: 0px 0px 1px rgb(0, 0, 0); */
     /* font-family: 'Consolas', monospace; */
 }
